# rudeus

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  taplo.toml
.github/workflows/: build_and_test.yml
example/: example.toml
src/commands/: Cargo.toml
src/commands/src/: commands.rs  error.rs  lib.rs  parser.rs
src/commands/src/commands/: string.rs
src/commands/src/parser/: alt.rs
src/common/base/: Cargo.toml
src/common/base/src/: bytes.rs  lib.rs  lock_pool.rs  resp3.rs  timestamp.rs
src/common/runtime/: Cargo.toml
src/common/runtime/src/: error.rs  global_runtime.rs  lib.rs  runtime.rs
src/common/telemetry/: Cargo.toml
src/common/telemetry/src/: lib.rs  log.rs
src/roxy/: Cargo.toml
src/roxy/src/: database.rs  datatypes.rs  error.rs  lib.rs  metadata.rs  storage.rs  write_batch.rs
src/roxy/src/datatypes/: string.rs
src/server/: Cargo.toml
src/server/src/: connection.rs  error.rs  lib.rs  rudeus.rs  rudeus_lock.rs  server.rs
