[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["src/common/telemetry", "src/roxy", "src/server"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
redis-protocol = "4.1"
snafu = "0.8"
derive_builder = "0.20"
bytes = "1.6"
rocksdb = "0.22"
strum = { version = "0.26", features = ["derive"]}
parking_lot = "0.12"

## workspace members
common-telemetry = { path = "src/common/telemetry" }
roxy = { path = "src/roxy" }