[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rudeus"
path = "src/rudeus.rs"

[dependencies]
tokio.workspace = true
redis-protocol.workspace = true
snafu.workspace = true
bytes.workspace = true
common-telemetry.workspace = true
roxy.workspace = true