[package]
name              = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rudeus"
path = "src/rudeus.rs"

[dependencies]
bytes.workspace          = true
futures.workspace        = true
redis-protocol.workspace = true
roxy.workspace           = true
serde.workspace          = true
snafu.workspace          = true
tokio-util.workspace     = true
tokio.workspace          = true
toml.workspace           = true

common-base.workspace      = true
common-runtime.workspace   = true
common-telemetry.workspace = true
