[package]
name              = "common-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-telemetry.workspace = true
once_cell.workspace        = true
paste.workspace            = true
snafu.workspace            = true
tokio.workspace            = true
